most of the alignment problems solved + navbar collapse centered

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,8 +13,8 @@
 }
 
 #logo-img{
-  margin-top: 70px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 70px;
 }
 
   .navbar-collapse {
