--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -1,5 +1,6 @@
 .post-link {
   color:rgba(67,132,199,1);
+  font-size: 20px;
 }
 
 .comments {
